# PanoramicFFmpeg

./: CMakeLists.txt
.cache/clangd/index/: attributes.h.E3D3A042C0D0375B.idx  avcodec.h.17EE1E26AA2C48F7.idx  avconfig.h.8A5D7F95242E7543.idx  avdevice.h.BFC499E611CD9C79.idx  avfilter.h.5ED078B1CDB7BD38.idx  avformat.h.8727966B54A4A0C2.idx  avio.h.ED79C62DAF01FD72.idx  avutil.h.A4CFA3580DC1B61C.idx  buffer.h.183428144230CF85.idx  channel_layout.h.7E980CD88C6F2995.idx  codec.h.C68DC111670D0930.idx  codec_desc.h.AE6859F10275D0A9.idx  codec_id.h.B976AAE182A9FD98.idx  codec_par.h.BDFA26CE28131EE8.idx  common.h.CA80BE0ECDC5C435.idx  defs.h.735C41885136266C.idx  dict.h.84E3D63B5CEFA26E.idx  error.h.C89E0B9CDAA5AB53.idx  frame.h.5C51758D1416D582.idx  glad.c.A5ECD4FA56BCFEFE.idx  glad.h.0228404A5279F985.idx  hwcontext.h.AF556DC6D65A3E8F.idx  intfloat.h.69FA76818763ECB3.idx  khrplatform.h.507A827655F95EF0.idx  log.h.F6C2DC0A424DBE69.idx  macros.h.778AF55922F39846.idx  main.cpp.D6BA7DA742A24D67.idx  mathematics.h.68319A7C62FBB80C.idx  mem.h.EB7F86F450C6D474.idx  opt.h.C99DA09EC2669A94.idx  packet.h.B464D47D0EE5F5A6.idx  pixfmt.h.7D3C43FB094E0E49.idx  postprocess.h.2E6A5A5C332A7FE9.idx  rational.h.6B2D3992CCB39C04.idx  samplefmt.h.18915DA9EF11D3F5.idx  shader.h.94428437C0738820.idx  stb_image.h.93167861D33942B0.idx  swresample.h.DA3B5F2BB2677D6B.idx  swscale.h.2D7C4FD37E9A80A1.idx  texture.cpp.39F7937C83D031DB.idx  (+10 more)
demo/: camera.cpp  camera.h  main.cpp  postprocess.h  texture.cpp  texture.h  timer.cpp  timer.h  video.cpp  video.h  viewer.fs  viewer.vs
